--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\DND.Domain\packages.config" />
+  <repository path="..\DND.Services.Implementation\packages.config" />
   <repository path="..\DND.Services\packages.config" />
   <repository path="..\DND.StructureMapRegistries\packages.config" />
   <repository path="..\DND\packages.config" />
